enum delivery_tipe {
  economical
  fast
  conventional
  collect
}

enum status {
  created
  shipped
  in_transit
  delivered
  canceled
}

enum address_type {
  house
  apartment
  bussiness
  office
}

Table admin {
  id integer [pk, increment]
  username varchar [not null, unique]
  password varchar [not null]
  created_at timestamp
}

Table recipient {
  id integer [pk, increment]
  first_name varchar [not null]
  last_name varchar [not null]
  cpf varchar [not null, unique]
  email varchar [not null, unique]
  address integer
  password varchar [not null]
  created_at timestamp
}

Table address {
  id integer [primary key, increment]
  addresse_id integer
  cep varchar
  country varchar [not null]
  neighborhood varchar
  street varchar
  number int
  reference varchar
  type address_type
}
Ref: address.addresse_id > recipient.id

Table carrier {
  id interger [primary key, increment]
  name varchar [unique, not null]
  delivery_type delivery_tipe [not null]
  base_tax integer [not null]
}

Table delivery {
  id integer [primary key]
  admin_id integer
  carrier_id integer [not null]
  final_address_id integer [not null]
  start_address_id integer [not null]
  tracking_number varchar [not null, unique]
  addresse integer
  receiver varchar
  status status [not null]
  type delivery_type [not null]
  tax decimal
  deadline timestamp [not null]
  updated_at timestamp
  created_at timestamp
}
Ref: delivery.admin_id > admin.id
Ref: delivery.addresse > recipient.id
Ref: delivery.carrier_id - carrier.id
Ref: delivery.start_address_id - address.id
Ref: delivery.final_address_id - address.id

Table delivery_status_history {
  id integer [pk, increment]
  delivery_id integer [not null]
  status status [not null]
  created_at timestamp
}
Ref: delivery_status_history.delivery_id > delivery.id
